# tinyknn

./: .flake8  .gitignore  README.md  _fast_pq.pyx  _transform.py  bench.py  example.py  fast_pq.py  ivf.py  ivf_example.py  pyproject.toml  requirements.txt  setup.py  test_pq.py  test_transform.py
.github/workflows/: testing.yml
examples/: annoy.py  bench.py  example.py  ivf_example.py  multiprobes.py  plot_bench.py  plot_bench2.py  rescore.py
examples/glove/: README.md  convert.py  prepare-dataset.sh
examples/sift/: convert.py  prepare-dataset.sh
fast_pq/: __init__.py  _fast_pq.pyx  _transform.py  fast_pq.py  ivf.py  utils.py
tests/: test_heap.py  test_ivf.py  test_multiprobe.py  test_other.py  test_pq.py  test_transform.py  test_utils.py
tinyknn/: __init__.py  _fast_pq.pyx  _fast_pq_256.pyx  _transform.py  fast_pq.py  ivf.py  utils.py
